--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     <tr>
                         <th>Roza</th>
                         <th>Date</th>
-                        <th>Iftar (PM)</th>
-                        <th>Sehri (AM)</th>
+                        <th>Iftar</th>
+                        <th>Sehri</th>
                     </tr>
                 </thead>
                 <tbody id="tableBody"></tbody>
